--- a/css/styles.css
+++ b/css/styles.css
@@ -62,6 +62,11 @@ img {
     list-style: none;
 }
 
+.link {
+    font-style: normal;
+    text-decoration: none;
+}
+
 
 /*--------------------------Header-------------------------*/
 
@@ -72,6 +77,17 @@ img {
 
 .header-link.current {
     color: var(--accent-color);
+    position: relative;
+}
+
+.header-link.current::after {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 4px;
+    background-color: var(--accent-color);
+    border-radius: 2px;
+    bottom: -1px;
 }
 
 
@@ -102,7 +118,10 @@ img {
     line-height: 1.14;
     letter-spacing: 0.02em;
     color: var(--title-text-color);
+    display: flex;
+    align-items: center;
     text-decoration: none;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .header-link:hover,
@@ -140,7 +159,7 @@ img {
     margin-right: 93px;
 }
 
-.header-item .header-link {
+.header-link {
     padding-top: 32px;
     padding-bottom: 32px;
 }
@@ -156,6 +175,7 @@ img {
 .header-icon {
     fill: var(--primary-text-color);
     margin-right: 10px;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .header-link.tel:hover .header-icon.tel,
@@ -166,11 +186,6 @@ img {
 .header-link.mail:hover .header-icon.mail,
 .header-link.mail:focus .header-icon.mail {
     fill: var(--accent-color);
-}
-
-.header-link {
-    display: flex;
-    align-items: center;
 }
 
 
@@ -220,11 +235,68 @@ img {
     border: 1px solid transparent;
     min-width: 200px;
     padding: 10px 32px;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .hunter-btn:hover,
 .hunter-btn:focus {
     background-color: #188ce8;
+}
+
+
+/* -------------МОДАЛЬНЕ ВІКНО--------------- */
+
+.backdrop {
+    position: fixed;
+    background-color: rgba(0, 0, 0, 0.2);
+    top: 0;
+    width: 100vw;
+    height: 100vh;
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) scale(1);
+    width: 528px;
+    min-height: 581px;
+    background-color: var(--main-color-background);
+    border-radius: 4px;
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.backdrop.is-hidden .modal {
+    transform: translate(-50%, -50%) scale(0);
+}
+
+.modal-close-btn {
+    position: absolute;
+    height: 30px;
+    width: 30px;
+    right: 8px;
+    top: 8px;
+    border-radius: 50%;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    background-color: var(--main-color-background);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.modal-close-icon {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    fill: #000000;
+}
+
+.is-hidden {
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
 }
 
 
@@ -284,6 +356,29 @@ img {
 .our-work-list {
     display: flex;
     justify-content: space-between;
+}
+
+.our-work-item {
+    position: relative;
+    text-align: center;
+}
+
+.thumb-text {
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: #ffffff;
+}
+
+.thumb-box {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 70px;
+    padding: 27px 0;
+    background-color: rgba(47, 48, 58, 0.8);
 }
 
 
@@ -371,6 +466,11 @@ img {
     fill: var(--main-color-background);
 }
 
+.soc-link,
+.soc-icon {
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
 
 /* ------------Постоянные клиенты -----------*/
 
@@ -418,6 +518,11 @@ img {
     fill: var(--accent-color);
 }
 
+.clients-link,
+.clients-icon {
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
 
 /*--------------------FOOTER--------------------*/
 
@@ -440,13 +545,14 @@ img {
     display: block;
 }
 
-.link {
+.adress-item .link {
     font-style: normal;
     text-decoration: none;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.link:hover,
-.link:focus {
+.adress-item .link:hover,
+.adress-item .link:focus {
     color: var(--accent-color);
 }
 
@@ -505,6 +611,7 @@ img {
     height: 100%;
     background-color: rgba(255, 255, 255, 0.1);
     border-radius: 50%;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .adress-soc {
@@ -551,6 +658,7 @@ img {
     min-width: 71px;
     padding: 6px 22px;
     border: 1px solid transparent;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio-btn:hover,
@@ -591,12 +699,37 @@ img {
     border-right: 1px solid #eeeeee;
 }
 
-.portfolio-link.link {
+.portfolio-link {
     display: block;
     width: 100%;
     height: 100%;
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio-link:hover {
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+
+
+/* --------------ОВЕРЛЕЙ-------------------- */
+
+.thumb-img {
+    position: relative;
+    overflow: hidden;
+}
+
+.portfolio-thumb-text {
+    position: absolute;
+    padding: 63px 24px;
+    height: 100%;
+    font-size: 18px;
+    line-height: 1.56;
+    letter-spacing: 0.03em;
+    color: var(--secondary-text-color);
+    background-color: rgba(33, 150, 243, 0.9);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.portfolio-link:hover .portfolio-thumb-text {
+    transform: translateY(-100%);
 }
