--- a/css/styles.css
+++ b/css/styles.css
@@ -284,6 +284,7 @@ img {
     display: flex;
     justify-content: center;
     align-items: center;
+    cursor: pointer;
 }
 
 .modal-close-icon {
