--- a/css/styles.css
+++ b/css/styles.css
@@ -716,12 +716,14 @@ img {
     position: absolute;
     padding: 63px 24px;
     height: 100%;
+    width: 100%;
     font-size: 18px;
     line-height: 1.56;
     letter-spacing: 0.03em;
     color: var(--secondary-text-color);
     background-color: rgba(33, 150, 243, 0.9);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    overflow: auto;
 }
 
 .portfolio-link:hover .portfolio-thumb-text {
