--- a/css/styles.css
+++ b/css/styles.css
@@ -354,7 +354,6 @@ img {
 
 .our-work-item {
     position: relative;
-    text-align: center;
 }
 
 .thumb-text {
@@ -368,10 +367,12 @@ img {
 
 .thumb-box {
     position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     bottom: 0;
     width: 100%;
     height: 70px;
-    padding: 27px 0;
     background-color: rgba(47, 48, 58, 0.8);
 }
 
@@ -460,9 +461,12 @@ img {
     fill: var(--main-color-background);
 }
 
-.soc-link,
+.soc-link {
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
 .soc-icon {
-    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 
@@ -512,9 +516,12 @@ img {
     fill: var(--accent-color);
 }
 
-.clients-link,
 .clients-icon {
-    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.clients-link {
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 
